--- a/cors-config.json
+++ b/cors-config.json
@@ -1,6 +1,7 @@
+
 [
   {
-    "origin": ["https://9000-firebase-studio-1752165066194.cluster-iesosxm5fzdewqvhlwn5qivgry.cloudworkstations.dev", "http://localhost:9002"],
+    "origin": ["https://9000-firebase-studio-1752165066194.cluster-iesosxm5fzdewqvhlwn5qivgry.cloudworkstations.dev"],
     "method": ["GET", "PUT", "POST", "DELETE"],
     "responseHeader": ["Content-Type", "x-goog-resumable"],
     "maxAgeSeconds": 3600
