--- a/cors-config.json
+++ b/cors-config.json
@@ -1,9 +1,26 @@
-
 [
   {
-    "origin": ["https://9000-firebase-studio-1752165066194.cluster-iesosxm5fzdewqvhlwn5qivgry.cloudworkstations.dev"],
-    "method": ["GET", "PUT", "POST", "DELETE"],
-    "responseHeader": ["Content-Type", "x-goog-resumable"],
+    "origin": [
+      "https://9000-firebase-studio-1752165066194.cluster-iesosxm5fzdewqvhlwn5qivgry.cloudworkstations.dev",
+      "http://localhost:9002"
+    ],
+    "method": [
+      "GET",
+      "POST",
+      "PUT",
+      "DELETE",
+      "OPTIONS"
+    ],
+    "responseHeader": [
+      "Content-Type",
+      "Authorization",
+      "Content-Length",
+      "User-Agent",
+      "x-goog-resumable",
+      "x-goog-api-client",
+      "x-firebase-gmpid",
+      "X-Requested-With"
+    ],
     "maxAgeSeconds": 3600
   }
 ]
