--- a/cors-config.json
+++ b/cors-config.json
@@ -8,18 +8,11 @@
       "GET",
       "POST",
       "PUT",
-      "DELETE",
-      "OPTIONS"
+      "DELETE"
     ],
     "responseHeader": [
       "Content-Type",
-      "Authorization",
-      "Content-Length",
-      "User-Agent",
-      "x-goog-resumable",
-      "x-goog-api-client",
-      "x-firebase-gmpid",
-      "X-Requested-With"
+      "x-goog-resumable"
     ],
     "maxAgeSeconds": 3600
   }
