--- a/cors-config.json
+++ b/cors-config.json
@@ -12,6 +12,7 @@
     ],
     "responseHeader": [
       "Content-Type",
+      "Authorization",
       "x-goog-resumable"
     ],
     "maxAgeSeconds": 3600
