--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.4.1",
     "typescript": "5.9.2"
   }
 }
