--- a/firebase.json
+++ b/firebase.json
@@ -15,8 +15,13 @@
     "rewrites": [
       {
         "source": "**",
-        "function": "anella-backend" 
+        "function": "nextServer"
       }
     ]
+  },
+"functions": {
+    "source": ".",
+    "runtime": "nodejs20"
   }
+
 }
