--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
@@ -45,11 +46,13 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.4.0",
     "framer-motion": "^11.2.12",
     "genkit": "^1.13.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^15.5.4",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -69,7 +72,6 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.9.2"
+    "tailwindcss": "3.4.1"
   }
 }
