--- a/firebase.json
+++ b/firebase.json
@@ -21,7 +21,8 @@
   },
 "functions": {
     "source": ".",
-    "runtime": "nodejs20"
+    "runtime": "nodejs20",
+    "predeploy": ["npm run build"]
   }
 
 }
